Add: Implement PWA and code optimization

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tailwindcss -i ./src/input.css -o ./output.css --watch"
+    "dev": "npx tailwindcss -i ./src/input.css -o ./output.css --watch",
+    "minify": "npx tailwindcss -i ./src/input.css -o ./output.css --watch --minify"
   },
   "author": "",
   "license": "ISC",
